--- a/frontend/src/blocks/infoTooltip/__img/infoTooltip__img.css
+++ b/frontend/src/blocks/infoTooltip/__img/infoTooltip__img.css
@@ -3,7 +3,7 @@
     padding: 60px 0 32px;
 }
 
-@media screen and (max-width: 385px) { */
+@media screen and (max-width: 385px) {
     .infoTooltip__img {
         padding: 50px 0 40px;
     }
