--- a/frontend/src/blocks/cards/cards.css
+++ b/frontend/src/blocks/cards/cards.css
@@ -1,6 +1,6 @@
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(282px, 282px));
   gap: 20px 17px;
   align-self: center;
   width: 100%;
@@ -8,6 +8,7 @@
   color: #000;
   list-style: none;
   margin: 0;
+  justify-content: center;
 }
 
 @media screen and (max-width: 950px) {
